# Production-Schedule-Program

./: README.md  cli.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
sample_data/: orders.csv  resources.csv
src/: cli.py  config.py  data.py  pipeline.py  sample program.py
src/schedulerx/: adapters_csv.py  cli.py  heuristics.py  interfaces.py  kpis.py
tests/: test_scheduler.py
