[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schedulerx"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "python-dateutil>=2.8.2",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pandas>=2.0.0",
]

[project.scripts]
production-schedule = "cli:main"

[tool.setuptools]
py-modules = ["cli", "config", "data", "pipeline"]

[tool.setuptools.package-dir]
"" = "src"
